updates Javadoc